parse all deaths from wiki

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "download-year-pages": "node scripts/download-year-pages.js"
+    "download-year-pages": "node scripts/download-year-pages.js",
+    "parse-year-pages": "node scripts/parse-year-pages.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cheerio": "1.0.0-rc.2",
+    "d3": "5.5.0",
     "mkdirp": "0.5.1",
     "wikijs": "4.8.0"
   }
