--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "join-people": "node scripts/join-people.js",
     "explore": "node scripts/explore.js",
     "filter-population": "node scripts/filter-population.js",
+    "add-details": "node scripts/add-details.js",
     "prepare-web": "node scripts/prepare-web.js"
   },
   "keywords": [],
@@ -21,6 +22,7 @@
     "d3": "5.5.0",
     "mkdirp": "0.5.1",
     "pageviews": "1.4.0",
+    "request": "2.87.0",
     "wikijs": "4.8.0"
   }
 }
