--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheerio": "1.0.0-rc.2",
     "d3": "5.5.0",
     "mkdirp": "0.5.1",
+    "npm-run-all": "4.1.3",
     "pageviews": "1.4.0",
     "request": "2.87.0",
     "wikijs": "4.8.0"
