--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "get-wiki-pageviews": "node scripts/get-wiki-pageviews.js",
     "get-people-pageviews": "node scripts/get-people-pageviews.js",
     "join-people": "node scripts/join-people.js",
+    "by-week": "node scripts/by-week.js",
     "explore": "node scripts/explore.js",
     "filter-population": "node scripts/filter-population.js",
     "add-details": "node scripts/add-details.js",
