--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "parse-year-pages": "node scripts/parse-year-pages.js",
     "get-wiki-pageviews": "node scripts/get-wiki-pageviews.js",
     "get-people-pageviews": "node scripts/get-people-pageviews.js",
-    "by-week": "node scripts/by-week.js",
+    "bin": "node scripts/bin.js",
     "stats": "node scripts/stats.js",
     "filter-population": "node scripts/filter-population.js",
     "add-details": "node scripts/add-details.js",
