--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm-run-all": "4.1.3",
     "pageviews": "1.4.0",
     "request": "2.87.0",
+    "simple-statistics": "6.1.0",
     "wikijs": "4.8.0"
   }
 }
