--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cheerio": "1.0.0-rc.2",
     "d3": "5.5.0",
     "mkdirp": "0.5.1",
+    "moving-averages": "4.0.5",
     "npm-run-all": "4.1.3",
     "pageviews": "1.4.0",
     "request": "2.87.0",
